--- a/pdf_data_to_web_form/src/App.css
+++ b/pdf_data_to_web_form/src/App.css
@@ -3,3 +3,14 @@
   text-align: center;
   width: 600px;
 }
+input[type=submit] {
+  position:absolute;
+  top: 0;
+  left: 600px; 
+  background:#ccc; 
+  border:0 none;
+  cursor:pointer;
+  width: 90px;
+  height: 30px;
+  
+}
